user-service jpa 연관관계 매핑 추가 , 그룹 레파지토리 추가 작업